Use keystone user for drb-controller service
Related-Prod: PRODX-41871
Change-Id: I9112748a00b2a43da64a51ef072c5ba87de19365

--- a/tests/fixtures/render_service_template/input/yoga_ceph_local_non_dvr/context_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/yoga_ceph_local_non_dvr/context_template_args.yaml
@@ -41,10 +41,12 @@ cloudprober:
       password: QXH50EtBVsiCptehSf4l55Y1R3QdGFv8xc
       username: osctlQECh8
 dynamic-resource-balancer:
-  keystone_creds:
-    drb_controller:
-      password: iCptehQXf4l55GFv8xc50EtBVY1HSR3Qds
-      username: osctlKiD31
+  credentials:
+  - identity:
+      drb-controller:
+        password: iCptehQXf4l55GFv8xc50EtBVY1HSR3Qds
+        username: drbcontrollerJhd
+  keystone_creds: {}
 compute:
   ceph:
     nova:
