--- a/tests/fixtures/render_service_template/output/dynamic-resource-balancer/yoga_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/dynamic-resource-balancer/yoga_ceph_local_non_dvr.yaml
@@ -6,18 +6,24 @@ spec:
       images:
         tags:
           drb_controller: drb-controller:latest
+          dep_check: dep-check:latest
+          ks_user: ks-user:latest
       endpoints:
         cluster_domain_suffix: cluster.local
         identity:
           auth:
-            drb-controller:
+            admin:
               default_domain_id: default
-              password: iCptehQXf4l55GFv8xc50EtBVY1HSR3Qds
-              username: osctlKiD31
+              password: ZUqTyP2XwsgEGKZ7qNhhecYyq9NLkGE6
               project_domain_name: default
               project_name: admin
               region_name: RegionOne
               user_domain_name: default
+              username: admin
+            drb-controller:
+              password: iCptehQXf4l55GFv8xc50EtBVY1HSR3Qds
+              username: drbcontrollerJhd
+              region_name: 'RegionOne'
           hosts:
             admin:
               host: keystone-api
