--- a/openstack_controller/templates/services/dynamic-resource-balancer.yaml
+++ b/openstack_controller/templates/services/dynamic-resource-balancer.yaml
@@ -12,6 +12,8 @@ spec:
         tags:
 {%- for image in [
     "drb_controller",
+    "dep_check",
+    "ks_user",
     ] %}
         {%- if image in images %}
           {{ image }}: {{ images[image] }}
@@ -19,16 +21,7 @@ spec:
 {%- endfor %}
       endpoints:
         cluster_domain_suffix: {{ spec.internal_domain_name }}
-        identity:
-          auth:
-            drb-controller:
-              region_name: {{ spec.get('region_name', 'RegionOne') }}
-              username: {{ keystone_creds["drb_controller"].username }}
-              password: {{ keystone_creds["drb_controller"].password }}
-              project_name: {{ keystone_users.get('admin', {}).get('project_name', 'admin') }}
-              user_domain_name: {{ keystone_users.get('admin', {}).get('user_domain_name', 'default') }}
-              project_domain_name: {{ keystone_users.get('admin', {}).get('project_domain_name', 'default') }}
-              default_domain_id: {{ keystone_users.get('admin', {}).get('default_domain_id', 'default') }}
+{% include 'base/_admin_identity.yaml' %}
           hosts:
             admin:
               host: keystone-api
