Add back AvailabilityZoneFilter for Yoga
Closes-Issue: PRODX-41990
Change-Id: I3addee86a519fb3921cc274c3f442c89b5ed9a9c

--- a/openstack_controller/templates/preset/compute.yaml
+++ b/openstack_controller/templates/preset/compute.yaml
@@ -134,7 +134,7 @@ services:
               # - AggregateNumInstancesFilter
               - AggregateTypeAffinityFilter
               # - AllHostsFilter
-              {%- if openstack_version in ['queens', 'rocky', 'stein', 'train', 'ussuri', 'victoria', 'xena', 'wallaby', 'zed', 'antelope'] %}
+              {%- if openstack_version in ['queens', 'rocky', 'stein', 'train', 'ussuri', 'victoria', 'xena', 'wallaby', 'yoga', 'zed', 'antelope'] %}
               - AvailabilityZoneFilter
               {%- endif %}
               - ComputeFilter
