[ironic] Increase retries on conflicts
Increase number of retries and retry delay for errors with
conflict exception.

Related-Prod: PRODX-3456
Change-Id: I050079d678a450db7d1b357864db4592ad6d430e

--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_ironic.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_ironic.yaml
@@ -154,6 +154,9 @@ spec:
             track_instance_changes: false
           scheduler:
             discover_hosts_in_cells_interval: 120
+          ironic:
+            status_code_retries: 15
+            status_code_retry_delay: 15
         ssh_private: 'COMPUTE TEST SSH PRIVATE KEY
 
           '
