--- a/openstack_controller/templates/services/compute.yaml
+++ b/openstack_controller/templates/services/compute.yaml
@@ -957,6 +957,9 @@ spec:
             track_instance_changes: false
           scheduler:
             discover_hosts_in_cells_interval: 120
+          ironic:
+            status_code_retries: 15
+            status_code_retry_delay: 15
       {%- endif %}
         logging:
           logger_nova:
