Allow access to pdsn api from SL namespace
powerdns API exposes metrics endpoint that should be accessible from SL.

Related-Prod: PRODX-3456
Change-Id: Icdf0151ddb5fea3a490904bb4ee0bf2d7121e5a9

--- a/openstack_controller/templates/base/network_policies/dns.yaml
+++ b/openstack_controller/templates/base/network_policies/dns.yaml
@@ -24,3 +24,5 @@
             ingress:
               - from:
 {{ from_all(service_childs[mdns_pod].get_np_ports(["pdns-tcp", "pdns-udp"])) | indent(16) }}
+              - from:
+{{ from_namespaces(api_ns_list, service_childs[mdns_pod].get_np_ports(["pdns-api"])) | indent(16) }}
