--- a/tests/fixtures/render_service_template/output/dns/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/dns/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -256,6 +256,16 @@ spec:
                   protocol: TCP
                 - port: 53
                   protocol: UDP
+              - from:
+                - namespaceSelector:
+                    matchLabels:
+                      kubernetes.io/metadata.name: osh-system
+                - namespaceSelector:
+                    matchLabels:
+                      kubernetes.io/metadata.name: stacklight
+                ports:
+                  - port: 8081
+                    protocol: TCP
             podSelector:
               matchLabels:
                 application: designate
