[dns] Enable cache by default
Disabled cache leads to significant performance degradation.
Enable cache with default settings by default.

Related-Prod: PRODX-42390
Change-Id: I39f445a3b4500d8dfd471f97d5b51db57b0c1cee

--- a/openstack_controller/templates/services/dns.yaml
+++ b/openstack_controller/templates/services/dns.yaml
@@ -104,6 +104,10 @@ spec:
           loglevel: 5
           webserver-loglevel: 'detailed'
       {%- endif %}
+          # Do not disable cache, limits performance significantly PRODX-42390
+          cache_ttl: 20
+          negquery_cache_ttl: 60
+          query_cache_ttl: 20
 {%- if spec.features.network_policies.enabled %}
       network_policy:
 {% include 'base/network_policies/dns.yaml' %}
