--- a/tests/fixtures/render_service_template/output/dns/ussuri_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/dns/ussuri_ceph_local_non_dvr.yaml
@@ -9,6 +9,9 @@ spec:
           02-custom.yaml: {}
         powerdns:
           zone-cache-refresh-interval: 120
+          cache_ttl: 20
+          negquery_cache_ttl: 60
+          query_cache_ttl: 20
         designate:
           keystone_authtoken:
             memcache_secret_key: zdLlg6VAsGH6E7tX
