--- a/openstack_controller/templates/preset/compute-tf.yaml
+++ b/openstack_controller/templates/preset/compute-tf.yaml
@@ -137,6 +137,12 @@ services:
     nova:
       values:
         conf:
+          {%- if OSVer.antelope <= OSVer[openstack_version] %}
+          policy.d:
+            01-controller-default.yaml:
+              "os_compute_api:os-migrate-server:migrate": "rule:project_member_or_admin"
+              "os_compute_api:os-migrate-server:migrate_live": "rule:project_member_or_admin"
+          {%- endif %}
           nova:
             filter_scheduler:
               enabled_filters:
@@ -330,6 +336,10 @@ services:
             # NOTE(vsaienko): let nova scheduler pick destination host
             compute-feature-enabled:
               can_migrate_between_any_hosts: false
+            {%- if OSVer.antelope <= OSVer[openstack_version] %}
+              cold_migration_nonadmin: true
+              live_migration_nonadmin: true
+            {%- endif %}
             #TODO(mshalamov): Will be removed during process of completing PRODX-1192
             image:
               build_timeout: 600
