Change name image raw config option
Related-Prod: PRODX-42880
Change-Id: I021a5854387e062703110f3d969a2d263f19f166

--- a/openstack_controller/templates/preset/compute-tf.yaml
+++ b/openstack_controller/templates/preset/compute-tf.yaml
@@ -230,7 +230,7 @@ services:
             compute:
               image_ref: {{ cirros_image_name }}
               image_ref_alt: {{ cirros_image_name ~ '.alt' }}
-              image_ref_raw: {{ cirros_image_name ~ '.raw' }}
+              image_raw_ref: {{ cirros_image_name ~ '.raw' }}
               flavor_ref:  m1.extra_tiny_test
               flavor_ref_alt: m1.tiny_test
           blacklist:
