--- a/openstack_controller/templates/preset/compute.yaml
+++ b/openstack_controller/templates/preset/compute.yaml
@@ -217,7 +217,7 @@ services:
             compute:
               image_ref: {{ cirros_image_name }}
               image_ref_alt: {{ cirros_image_name ~ '.alt' }}
-              image_ref_raw: {{ cirros_image_name ~ '.raw' }}
+              image_raw_ref: {{ cirros_image_name ~ '.raw' }}
             {%- if ironic_enabled %}
               # TODO(vsaienko): change name to more generic
               flavor_ref:  baremetal-ram1024-cpus2-disk10
