[mariadb] Use smaller timeouts between probes
Avoid powerdns outages during mariadb updates and
crashes.

Related-Prod: PRODX-3456
Change-Id: I9dca91ae7a22c618834119a4560e4c690c3e01ec

--- a/openstack_controller/templates/services/database.yaml
+++ b/openstack_controller/templates/services/database.yaml
@@ -128,6 +128,18 @@ spec:
           cron: "{{ backup_params.get('schedule_time', '0 1 * * *') }}"
           suspend: {{ not backup_params.get('enabled', false) }}
       pod:
+        probes:
+          server:
+            mariadb:
+              readiness:
+                enabled: true
+                disk_usage_percent: 99
+                params:
+                  initialDelaySeconds: 30
+                  # NOTE(vsaienko): ensure we able to recover in powerdns cache time to avoid
+                  # downtimes on powerdns side.
+                  periodSeconds: 5
+                  timeoutSeconds: 5
         replicas:
           server: 3
 {%- if spec.get('features', {}).get('database', {}).get('local_volumes', {}).get('enabled', False) %}
