--- a/tests/fixtures/render_service_template/output/dns/yoga_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/dns/yoga_ceph_local_non_dvr.yaml
@@ -12,6 +12,7 @@ spec:
           cache_ttl: 20
           negquery_cache_ttl: 60
           query_cache_ttl: 20
+          receiver-threads: 2
         software:
           apache2:
             enabled: True
