--- a/tests/fixtures/network_policies/output/identity.yaml
+++ b/tests/fixtures/network_policies/output/identity.yaml
@@ -123,6 +123,10 @@ identity:keystone:Deployment:keystone-api:
   - podSelector:
       matchLabels:
         application: nova
+        component: placement-audit
+  - podSelector:
+      matchLabels:
+        application: nova
         component: compute
   - podSelector:
       matchLabels:
