--- a/tests/fixtures/network_policies/output/placement.yaml
+++ b/tests/fixtures/network_policies/output/placement.yaml
@@ -11,6 +11,10 @@ placement:placement:Deployment:placement-api:
   - podSelector:
       matchLabels:
         application: nova
+        component: placement-audit
+  - podSelector:
+      matchLabels:
+        application: nova
         component: compute
   - podSelector:
       matchLabels:
