--- a/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_local_proxy/context_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_local_proxy/context_template_args.yaml
@@ -144,6 +144,7 @@ images:
   nova_db_sync_online: nova-db-sync-online:latest
   nova_novncproxy: nova-novncproxy:latest
   nova_placement: nova-placement:latest
+  nova_placement_audit: nova-placement-audit:latest
   nova_scheduler: nova-scheduler:latest
   nova_service_cleaner: nova-service-cleaner:latest
   nova_spiceproxy: nova-spiceproxy:latest
