--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_policies.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_policies.yaml
@@ -406,6 +406,7 @@ spec:
           nova_db_sync_online: nova-db-sync-online:latest
           nova_novncproxy: nova-novncproxy:latest
           nova_placement: nova-placement:latest
+          nova_placement_audit: nova-placement-audit:latest
           nova_scheduler: nova-scheduler:latest
           nova_service_cleaner: nova-service-cleaner:latest
           nova_spiceproxy: nova-spiceproxy:latest
@@ -432,6 +433,7 @@ spec:
             node_selector_value: enabled
       manifests:
         cron_job_db_purge: true
+        cron_job_placement_audit: true
         deployment_consoleauth: false
         deployment_placement: false
         ingress_placement: false
