--- a/tests/fixtures/network_policies/output/dns.yaml
+++ b/tests/fixtures/network_policies/output/dns.yaml
@@ -6,6 +6,10 @@ dns:designate:StatefulSet:designate-api:
         component: server
   - podSelector:
       matchLabels:
+        application: designate
+        component: zone_setup
+  - podSelector:
+      matchLabels:
         application: keystone
         component: client
   - podSelector:
