--- a/openstack_controller/templates/services/dns.yaml
+++ b/openstack_controller/templates/services/dns.yaml
@@ -22,6 +22,8 @@
 {%- set cadf_audit = spec.get('features', {}).get('logging', {}).get('cadf', {'enabled': false}) %}
 {%- set cadf_audit_driver = spec.get('features', {}).get('logging', {}).get('cadf', {}).get('driver', 'messagingv2') %}
 
+{%- set test_zone_name = "mosk.test." %}
+
 
 spec:
   releases:
@@ -50,6 +52,7 @@ spec:
     "powerdns",
     "designate_pool_manage",
     "designate_pool_manage_hash",
+    "designate_zone_setup",
     "powerdns_db_sync",] %}
         {%- if image in images %}
           {{ image }}: {{ images[image] }}
@@ -61,6 +64,14 @@ spec:
             jobs:
               - openstack-mariadb-cluster-wait
       conf:
+        zones: |
+          {{ test_zone_name }}:
+            email: test@test.test
+            recordsets:
+              - name: foo.{{ test_zone_name }}
+                type: A
+                records:
+                  - 1.2.3.4
         policy.d:
           01-controller-default.yaml: {{ service_policy }}
           02-custom.yaml: {{ spec.get("features", {}).get("policies", {}).get("designate", {}) }}
@@ -130,6 +141,7 @@ spec:
         job_powerdns_db_sync: true
         job_powerdns_db_init: true
         secret_ca_bundle: true
+        job_zone_setup: true
       network:
         mdns:
           node_port:
