[block-storage] Add support for custom volume backends as StatefulSet
This changes allow to create overrides for cinder configuration for StatefulSet
but the bootstrap section must be updated via service level

Related-Prod: PRODX-42717
Change-Id: I5a41b34b49f92714b80567899224e18408c1c957

--- a/openstack_controller/admission/validators/schemas/osdpl.yaml
+++ b/openstack_controller/admission/validators/schemas/osdpl.yaml
@@ -1455,6 +1455,45 @@ properties:
                   When enabled openstack-controller will wait for ceph deployment
                   provided by MOSK Ceph controller. Disable for cephless deployment.
                   default true
+              backends:
+                type: object
+                description: |
+                  Custom additional Cinder backend configuration
+                additionalProperties: False
+                patternProperties:
+                  ".*":
+                    description: |
+                      Backend name
+                    additionalProperties: False
+                    type: object
+                    required:
+                      - type
+                      - values
+                    properties:
+                      enabled:
+                        type: boolean
+                      type:
+                        type: string
+                        enum:
+                          - statefulset
+                      values:
+                        type: object
+                        additionalProperties: False
+                        required:
+                          - conf
+                        properties:
+                          conf:
+                            type: object
+                            additionalProperties: True
+                          images:
+                            type: object
+                            additionalProperties: True
+                          labels:
+                            type: object
+                            additionalProperties: True
+                          pod:
+                            type: object
+                            additionalProperties: True
           backup:
             type: object
             additionalProperties: false
