Enable libvirt inhibit locks for yoga and upper
Lock system for reboot and shutdown vms on poweroff dbus event
works with

 * systemctl reboot
 * shutdown -r

Does not work
 * reboot
 * shutdown -r now

[0] https://github.com/systemd/systemd/issues/22058
[1] https://github.com/systemd/systemd/commit/adefc8789b63225662e50ceaa282f9553b5c64eb

Related-Prod: PRODX-43725
Change-Id: I6b57b1ed5288225da1a921c71a207ac99be7fcb4

--- a/openstack_controller/templates/services/compute.yaml
+++ b/openstack_controller/templates/services/compute.yaml
@@ -132,6 +132,7 @@ spec:
 {%- for image in ["image_repo_sync",
                  "libvirt",
                  "ceph_config_helper",
+                 "libvirt_inhibit",
                  "dep_check",] %}
         {%- if image in images %}
           {{ image }}: {{ images[image] }}
@@ -187,6 +188,10 @@ spec:
         user_secret_name: {{ ceph.nova.secrets }}
 {%- endif %}
       conf:
+{%- if OSVer.yoga <= OSVer[spec.openstack_version] %}
+        inhibit_lock:
+          enabled: true
+{%- endif %}
         ceph:
 {%- if is_ceph_enabled %}
           enabled: true
