--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_ceph_non_dvr_rmq.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_ceph_non_dvr_rmq.yaml
@@ -139,6 +139,7 @@ spec:
           dep_check: dep-check:latest
           image_repo_sync: image-repo-sync:latest
           libvirt: libvirt:latest
+          libvirt_inhibit: nova:latest
       manifests:
         ceph_conf: true
         network_policy: false
