--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_novnc.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_novnc.yaml
@@ -67,6 +67,7 @@ spec:
           dep_check: dep-check:latest
           image_repo_sync: image-repo-sync:latest
           libvirt: libvirt:latest
+          libvirt_inhibit: nova:latest
       manifests:
         network_policy: false
         ceph_conf: true
