--- a/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_local_proxy/context_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_local_proxy/context_template_args.yaml
@@ -107,6 +107,7 @@ images:
   ks_user: ks-user:latest
   ks_trusts: ks-trusts:latest
   libvirt: libvirt:latest
+  libvirt_inhibit: nova:latest
   manila_service_image: https://manila-service-image-url/latest
   mariadb: mariadb:latest
   mariadb_backup: mariadb-backup:latest
