[block-storage] Add bootstrap support for custom volume backends
Related-Prod: PRODX-42957
Change-Id: Ic45bcfda0f46c550f10230b2c8dc381a9d505ac6

--- a/openstack_controller/admission/validators/schemas/osdpl.yaml
+++ b/openstack_controller/admission/validators/schemas/osdpl.yaml
@@ -1472,6 +1472,14 @@ properties:
                     properties:
                       enabled:
                         type: boolean
+                        description: |
+                          Enable additional Cinder backend to deploy
+                          default: True
+                      create_volume_type:
+                        type: boolean
+                        description: |
+                          Enable automatic volume type creation for this backend
+                          default: True
                       type:
                         type: string
                         enum:
