--- a/tests/fixtures/render_service_template/output/block-storage/yoga_ceph_local_non_dvr_cinder_extra_backend.yaml
+++ b/tests/fixtures/render_service_template/output/block-storage/yoga_ceph_local_non_dvr_cinder_extra_backend.yaml
@@ -32,6 +32,8 @@ spec:
       bootstrap:
         bootstrap_conf_backends: false
         volume_types:
+          netapp:
+            volume_backend_name: netapp
           volumes-hdd:
             volume_backend_name: volumes-hdd
           volumes-hdd_multiattach:
