[cinder] Use internal interface when communicating to nova
Related-Prod: PRODX-3456
Change-Id: I17644b2546e4773cf23df9ddb9a9df54c550bdb3

--- a/tests/fixtures/render_service_template/output/block-storage/ussuri_glance_cinder_netapp_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/block-storage/ussuri_glance_cinder_netapp_non_dvr.yaml
@@ -99,6 +99,7 @@ spec:
             rbd_secret_uuid: c9543a17-411c-45e1-8a25-3f03e0090dc2
             report_dynamic_total_capacity: false
           nova:
+            interface: internal
             auth_section: keystone_authtoken
             auth_type: password
         enable_iscsi: false
