--- a/openstack_controller/templates/services/block-storage.yaml
+++ b/openstack_controller/templates/services/block-storage.yaml
@@ -283,6 +283,7 @@ spec:
             report_dynamic_total_capacity: false
           # Needed for InstanceLocalityFilter
           nova:
+            interface: internal
             auth_section: keystone_authtoken
             auth_type: password
 {%- if spec.get('features', {}).get('glance', {}).get("signature", {}).get("enabled", False) %}
