[block-storage] Make more strictly check in extra backends config
 * check if backend is in the enabled_backends param
 * the volume_backend_name and volume_driver params are
   mandatory for the backend configuration section

Related-Prod: PRODX-44160
Change-Id: I7e571c0cc594daa8890f67dd1b4de5982d432f7d

--- a/openstack_controller/templates/services/block-storage.yaml
+++ b/openstack_controller/templates/services/block-storage.yaml
@@ -46,17 +46,13 @@
 {%-   if sts_opts.get('enabled', True) %}
 {%-     do extra_volumes_sts.update({sts_name:{'values': sts_opts['values']}}) %}
 {%-     if sts_opts.get("create_volume_type", True) %}
-{%-       set enabled_backends = sts_opts["values"].get("conf", {}).get("cinder", {}).get("DEFAULT", {}).get("enabled_backends").split(',') %}
-{%-       if enabled_backends %}
-{%-         for section, opts in sts_opts["values"]["conf"]["cinder"].items() %}
-{%-           if section in enabled_backends %}
-{%-             set volume_backend_name = opts.get("volume_backend_name") %}
-{%-             if volume_backend_name %}
-{%-                do extra_bootstrap.update({volume_backend_name: {"volume_backend_name": volume_backend_name}}) %}
-{%-             endif %}
-{%-           endif %}
-{%-         endfor %}
-{%-       endif %}
+{%-       set enabled_backends = sts_opts["values"]["conf"]["cinder"]["DEFAULT"]["enabled_backends"].split(',') %}
+{%-       for section, opts in sts_opts["values"]["conf"]["cinder"].items() %}
+{%-         if section in enabled_backends %}
+{%-           set volume_backend_name = opts["volume_backend_name"] %}
+{%-           do extra_bootstrap.update({volume_backend_name: {"volume_backend_name": volume_backend_name}}) %}
+{%-         endif %}
+{%-       endfor %}
 {%-     endif %}
 {%-   endif %}
 {%- endfor %}
